--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 <h1>My First Heading</h1>
 
-<p>My first paragraph.</p>
+<a href="https://app.swish.nu/1/m/sw/?sw=YUvkglV2TGCOyvdcAl52oq9QH2chmhRM">Open Swish</a>
+
+<a target="_blank href="https://app.swish.nu/1/m/sw/?sw=YUvkglV2TGCOyvdcAl52oq9QH2chmhRM">Open Swish in new tab</a>
 
 </body>
 </html>
