--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <a href="https://app.swish.nu/1/m/sw/?sw=YUvkglV2TGCOyvdcAl52oq9QH2chmhRM">Open Swish</a>
 
-<a target="_blank href="https://app.swish.nu/1/m/sw/?sw=YUvkglV2TGCOyvdcAl52oq9QH2chmhRM">Open Swish in new tab</a>
+<a href="https://app.swish.nu/1/m/sw/?sw=YUvkglV2TGCOyvdcAl52oq9QH2chmhRM" target="_blank">Open Swish in new tab</a>
 
 </body>
 </html>
